GNOME Bugzilla – Bug 758205
glimagesink: Fix structure memory leak
Last modified: 2015-11-17 04:11:39 UTC
When navigation event is not handled, the structure being passed should be freed. This results in memory leak
Created attachment 315719 [details] [review] fix structure memory leak
master: commit 15251e4824dec32277f372a7cdab664877c67cd9 Author: Vineeth TM <vineeth.tm@samsung.com> Date: Tue Nov 17 09:08:52 2015 +0900 glimagesink: Fix structure memory leak https://bugzilla.gnome.org/show_bug.cgi?id=758205 1.6: commit 2ca86c6b0233c8187eec0e35461b2276eb2ce72d Author: Vineeth TM <vineeth.tm@samsung.com> Date: Tue Nov 17 09:08:52 2015 +0900 glimagesink: Fix structure memory leak https://bugzilla.gnome.org/show_bug.cgi?id=758205